--- a/app/views/ShibbolethEnvironments/list.scala.html
+++ b/app/views/ShibbolethEnvironments/list.scala.html
@@ -1,26 +1,23 @@
 @(ShibbolethEnvironments: List[ShibbolethConfiguration])
-@* @main("All Shibboleth Environments") { *@
-        <h2>All Shibboleth Environments</h2>
-        <table class="table table-striped">
-            <thead>
+
+
+@main("Current Configured Shibboleth Environments") {
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Client</th>
+                <th>Environment</th>
+                <th>Entity ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for(env <- ShibbolethEnvironments) {
                 <tr>
-                    <td>Client Name</td>
-                    <td>Environment</td>
+                    <td><a href="@routes.ShibbolethEnvironments.viewEnvironment(env.environment)">@env.clientName</a></td>
+                    <td>@env.environment</td>
+                    <td>@env.entityId</td>
                 </tr>
-            </thead>
-            <tbody>
-                @for(ShibbolethEnvironment <- ShibbolethEnvironments) {
-                    <tr>
-                        <td><a href="@routes.ShibbolethEnvironment.details(ShibbolethEnvironment.clientName)">
-                            @views.html.ShibbolethEnvironments.clientName
-                        </a></td>
-                    </tr>
-@*                    <tr>
-                        <td><a href="@routes.ShibbolethEnvironment.details(ShibbolethEnvironment.environment)">
-                            @ShibbolethEnvironment.environment
-                        </a></td>
-                    </tr>  *@
-                }
-            </tbody>
-        </table>
-@* } *@
+            }
+        </tbody>
+    </table>
+}
