--- a/app/views/ShibbolethEnvironments/details.scala.html
+++ b/app/views/ShibbolethEnvironments/details.scala.html
@@ -7,10 +7,10 @@
     @helper.form(action = routes.ShibbolethEnvironments.save()) {
         <fieldset>
             <legend>Environment (@envForm("clientName").valueOr("New"))</legend>
-            @helper.inputText(envForm("clientName"), '_label -> "Client Name")
+            @helper.inputText(envForm("description"), '_label -> "Description")
             @helper.inputText(envForm("environment"), '_label -> "Client Environment")
             @helper.inputText(envForm("entityId"), '_label -> "Service Provider Entity ID")
-            @helper.inputText(envForm("remoteUserAttribute"), '_label -> "Remote User Attribute")
+            @helper.inputText(envForm("idp"), '_label -> "Identity Provider Entity ID")
         </fieldset>
         <input type="submit" class="btn btn-primary" value="Save">
         <a class="btn" href="@routes.ShibbolethEnvironments.list()">Go back without saving</a>
